--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       crossorigin="anonymous"
     />
   </head>
+
   <body>
     <div id="content">
       <nav class="nav">
@@ -1105,5 +1106,6 @@
         </div>
       </footer>
     </div>
+    <script type="text/javascript" src="./js/app.js"></script>
   </body>
 </html>
