--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
+    <!-- MAIN CSS -->
+    <link rel="stylesheet" href="css/index.css" />
   </head>
 
   <body>
